# calc

./: .gitignore  .markdownlint.json  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile_dev  Makefile  README.md  build.sh  calc  calc.py  calc_debug  calc_dev  debug.sh  evaluator.py  mypy.sh  pyproject.toml  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.bat  setup.sh  test_calc.py
.github/workflows/: check_for_updates.yaml  check_for_updates.yml  ci.yml  docker.yml
src/calc/: __main__.py  evaluator.py  help_text.py  time_utils.py
tests/: test_basic.py  test_calc.py  test_errors.py  test_functions.py  test_output_format.py  test_time.py  test_time_utils.py
tools/: build.sh  debug.sh  flake8.sh  mypy.sh
