[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calc"
version = "0.1.0"
description = "A simple command-line calculator"
readme = "README.md"
authors = [{ name = "Shinichi Akiyama", email = "shinichi.akiyama@gmail.com" }]
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.9"
dependencies = [
    "prompt-toolkit",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ptpython",
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/shakiyam/calc"
"Bug Tracker" = "https://github.com/shakiyam/calc/issues"

[project.scripts]
calc = "calc.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["calc"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]